# advent-of-code-2022

./: .gitignore  README.md  environment.yml  setup.cfg
advent_support/: __init__.py  coordinate_system.py
day1/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
day13/: solution.py
day14/: solution.py
day15/: solution.py
day2/: solution.py
day3/: solution.py
day4/: solution.py
day5/: solution.py
day6/: solution.py
day7/: solution.py
day8/: solution.py
day9/: solution.py
