# Courtesy of: https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = advent_support
version = attr: advent_support.__version__
author = Damian Barabonkov
author_email = damianb@alum.mit.edu
description = Commonly used utilities to support advent of code development.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
keywords = adventofcode, python
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11   
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = advent_support
test_suite = tests
setup_requires =
    setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    more_itertools


[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true